--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -16,21 +16,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }}
-          extensions: mongodb, sodium
-          tools: composer:v2
+      - name: Dockerfileからイメージをビルド
+        run: docker build -t phpstan ../../docker/Dockerfile
 
-      - name: Prepare
-        run: composer install
+      - name: Composer install
+        run: docker run --rm -v ${{ github.workspace }}:/var/www/html phpstan composer install
 
-      - name: Versions
-        run: |
-          cat /etc/os-release
-          php -v
-          ./vendor/bin/phpstan --version
-      - name: Execute phpstan
-        run: |
-          ./vendor/bin/phpstan analyse
+      - name: PHPStan実行
+        run: docker run --rm -v ${{ github.workspace }}:/var/www/html phpstan vendor/bin/phpstan analyse
+
+
