--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Dockerfileからイメージをビルド
-        run: docker build -t phpstan ./docker/Dockerfile
+        run: docker build -t phpstan ./docker
 
       - name: Composer install
         run: docker run --rm -v ${{ github.workspace }}:/var/www/html phpstan composer install
