--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -2,9 +2,9 @@ name: phpstan
 
 on:
   pull_request:
-#    paths:
-#      - 'src/**'
-#      - 'tests/**'
+    paths:
+      - 'src/**'
+      - 'tests/**'
 
 jobs:
   phpstan:
